syntax = "proto3";
package oneflow;

import "operator/operator.proto";
import "register/register_desc.proto";
import "task/task.proto";
import "job/job_desc.proto";

message OfElf {
  repeated TaskProto task = 1;
  repeated OperatorProto op = 3;
  JobDescProto job_desc = 4;
}
